@@ -8,50 +8,54 @@ import com.neotee.ecommercesystem.shopsystem.product.domain.Product;
 import com.neotee.ecommercesystem.shopsystem.storageunit.domain.model.StorageUnit;
 import com.neotee.ecommercesystem.shopsystem.storageunit.domain.service.StorageUnitComparator;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 public class DeliveryPackageDomainService {
 
     public List<DeliveryPackage> allocate(Order order, List<StorageUnit> storageUnits) {
         var remainingItems = new HashMap<>(order.getOrderLineItemsMap());
-        var prioritizedStorageUnits = prioritizeStorageUnits(storageUnits, remainingItems, order.getClientZipCode());
+        var prioritizedStorageUnits = selectStorageUnitsByDeliveryPriority(storageUnits, remainingItems, order.getClientZipCode());
 
-        var completeStorageUnit = findCompleteStorageUnit(prioritizedStorageUnits, remainingItems);
+        var completeStorageUnit = findStorageUnitForCompleteFulfillment(prioritizedStorageUnits, remainingItems);
 
         if (completeStorageUnit.isPresent()) {
-            return List.of(createPackage(completeStorageUnit.get(), order, remainingItems));
+            return List.of(createPackageFrom(completeStorageUnit.get(), order, remainingItems));
         }
 
-        return allocateAcrossStorageUnits(order, prioritizedStorageUnits, remainingItems);
+        return splitFulfillmentAcrossStorageUnits(order, prioritizedStorageUnits, remainingItems);
     }
 
-    private List<StorageUnit> prioritizeStorageUnits(List<StorageUnit> storageUnits, Map<Product, Integer> items, ZipCode clientZipCode) {
+    private List<StorageUnit> selectStorageUnitsByDeliveryPriority(List<StorageUnit> storageUnits, Map<Product, Integer> items, ZipCode clientZipCode) {
         return storageUnits.stream()
                 .sorted(StorageUnitComparator.forOrder(items, clientZipCode))
                 .toList();
     }
 
-    private Optional<StorageUnit> findCompleteStorageUnit(List<StorageUnit> storageUnits, Map<Product, Integer> items) {
+    private Optional<StorageUnit> findStorageUnitForCompleteFulfillment(List<StorageUnit> storageUnits, Map<Product, Integer> items) {
         return storageUnits.stream()
                 .filter(storageUnit -> storageUnit.canFulfill(items))
                 .findFirst();
     }
 
-    private DeliveryPackage createPackage(StorageUnit storageUnit, Order order, Map<Product, Integer> items) {
+    private DeliveryPackage createPackageFrom(StorageUnit storageUnit, Order order, Map<Product, Integer> items) {
         var deliveryPackage = DeliveryPackage.create(storageUnit, order);
         addItemsToPackage(deliveryPackage, items);
         storageUnit.removeFromStock(items);
         return deliveryPackage;
     }
 
-    private List<DeliveryPackage> allocateAcrossStorageUnits(Order order, List<StorageUnit> storageUnits, Map<Product, Integer> remainingItems) {
+    private List<DeliveryPackage> splitFulfillmentAcrossStorageUnits(Order order, List<StorageUnit> storageUnits, Map<Product, Integer> remainingItems) {
         var packages = new ArrayList<DeliveryPackage>();
         var availableStorageUnits = new ArrayList<>(storageUnits);
 
         while (!remainingItems.isEmpty() && !availableStorageUnits.isEmpty()) {
             availableStorageUnits.sort(StorageUnitComparator.forOrder(remainingItems, order.getClientZipCode()));
 
-            var storageUnit = availableStorageUnits.remove(0);
+            var storageUnit = availableStorageUnits.removeFirst();
             var servableItems = storageUnit.getServableItems(remainingItems);
 
             if (servableItems.isEmpty()) {
@@ -61,12 +65,12 @@ public class DeliveryPackageDomainService {
             var deliveryPackage = DeliveryPackage.create(storageUnit, order);
             addItemsToPackage(deliveryPackage, servableItems);
             storageUnit.removeFromStock(servableItems);
-            removeAllocatedItems(remainingItems, servableItems);
+            applyFulfillment(remainingItems, servableItems);
 
             packages.add(deliveryPackage);
         }
 
-        validateAllocation(remainingItems);
+        ensureOrderIsFullyFulfilled(remainingItems);
 
         return packages;
     }
@@ -75,8 +79,8 @@ public class DeliveryPackageDomainService {
         items.forEach(deliveryPackage::addPart);
     }
 
-    private void removeAllocatedItems(Map<Product, Integer> remainingItems, Map<Product, Integer> allocatedItems) {
-        allocatedItems.forEach((product, quantity) -> {
+    private void applyFulfillment(Map<Product, Integer> remainingItems, Map<Product, Integer> fulfilledItems) {
+        fulfilledItems.forEach((product, quantity) -> {
             var remainingQuantity = remainingItems.get(product) - quantity;
 
             if (remainingQuantity <= 0) {
@@ -87,11 +91,11 @@ public class DeliveryPackageDomainService {
         });
     }
 
-    private void validateAllocation(Map<Product, Integer> remainingItems) {
+    private void ensureOrderIsFullyFulfilled(Map<Product, Integer> remainingItems) {
         if (!remainingItems.isEmpty()) {
             throw new DomainValidationException(
                     "Delivery",
-                    "Die Bestellung kann nicht vollständig geliefert werden."
+                    "The order cannot be fully fulfilled."
             );
         }
     }
